Fixes nav spacing on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,9 @@ footer {
     font-size: 1.2rem;
   }
 }
+
+.nav-link {
+  @include media-breakpoint-up(xs) {
+    padding: $nav-link-padding-y 0;
+  }
+}
